--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="demos/demo1">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Demo 1
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="codigo-segundoplano">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Codigo Segundo Plano
+            </NavLink>
+        </div>
     </nav>
 </div>
 
