Operatorias con código C#

--- a/Pages/Demos/Demo1.razor
+++ b/Pages/Demos/Demo1.razor
@@ -2,7 +2,17 @@
 
 <h3>Demo 1</h3>
 
-@code {
+<p>@a + @b </p>
 
+<p>@(a + b) </p>
+
+@@web
+
+
+
+@code {
+    private string web = "www.render2web.com";
+    private int a = 5;
+    private int b = 8;
 }
 
