--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -10,7 +10,7 @@
 
 @if (forecasts == null)
 {
-    <p><em>Loading...</em></p>
+    <p><em>Cargando...</em></p>
 }
 else
 {
@@ -42,6 +42,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        await Task.Delay(2000);
+
         forecasts = await ForecastService.GetForecastAsync(DateOnly.FromDateTime(DateTime.Now));
     }
 }
