--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,4 +1,5 @@
-﻿@page "/counter"
+﻿@layout LayoutCounterPersonalizado
+@page "/counter"
 @page "/counter/{valorInicial:int}"
 
 <PageTitle>Counter</PageTitle>
