--- a/Shared/LayoutCounterPersonalizado.razor
+++ b/Shared/LayoutCounterPersonalizado.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase;
 
 <div class="main">
-    <div class="content bg-info">
+    <div class="content bg-primary">
         @Body
     </div>
 </div>
