--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-circle-check" aria-hidden="true"></span> Codigo Segundo Plano
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="componentes">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Componentes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
