--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,13 @@
 ﻿@page "/"
 
 @using FundamentosBlazor.Data
+@using FundamentosBlazor.Pages.Transacciones
+
 @inject IDatosDemo bd
 
 <PageTitle>Index</PageTitle>
+
+<Transaccion></Transaccion>
 
 <h1>Hello, Dani!</h1>
 
