--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                 <span class="oi oi-circle-check" aria-hidden="true"></span> Componentes
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="libros">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Libros
+            </NavLink>
+        </div>
     </nav>
 </div>
 
