--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -44,6 +44,11 @@
                 <span class="oi oi-circle-check" aria-hidden="true"></span> Libros
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="componente-padre">
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Componente Padre
+            </NavLink>
+        </div>
     </nav>
 </div>
 
